# Prinsp

./: README.md  package-lock.json
.claude/: settings.local.json
plans/: architecture.md
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: AnnotationEditor.vue  RegionSelector.vue  Settings.vue  Toolbar.vue
src/composables/: useAnnotation.ts  useScreenshot.ts
src/types/: index.ts
