[package]
name = "prinsp"
version = "0.1.0"
description = "A screenshot tool for Linux"
authors = ["daisheng"]
edition = "2021"

[lib]
name = "prinsp_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
xcap = "0.7"
arboard = { version = "3", features = ["image-data"] }
base64 = "0.22"
image = "0.25"
imageproc = "0.25"
rusty-tesseract = "1"
